[project]
name = "odoo-addons-openg2p-registry"
version = "17.0.20240905.0"
dependencies = [
    "odoo-addon-g2p_auth_id_oidc>=17.0dev,<17.1dev",
    "odoo-addon-g2p_auth_oidc>=17.0dev,<17.1dev",
    "odoo-addon-g2p_bank>=17.0dev,<17.1dev",
    "odoo-addon-g2p_bank_rest_api>=17.0dev,<17.1dev",
    "odoo-addon-g2p_change_log>=17.0dev,<17.1dev",
    "odoo-addon-g2p_disable_password_login>=17.0dev,<17.1dev",
    "odoo-addon-g2p_documents>=17.0dev,<17.1dev",
    "odoo-addon-g2p_encryption>=17.0dev,<17.1dev",
    "odoo-addon-g2p_encryption_keymanager>=17.0dev,<17.1dev",
    "odoo-addon-g2p_encryption_rest_api>=17.0dev,<17.1dev",
    "odoo-addon-g2p_enumerator>=17.0dev,<17.1dev",
    "odoo-addon-g2p_mis_importer>=17.0dev,<17.1dev",
    "odoo-addon-g2p_mts>=17.0dev,<17.1dev",
    "odoo-addon-g2p_odk_importer>=17.0dev,<17.1dev",
    "odoo-addon-g2p_openid_vci>=17.0dev,<17.1dev",
    "odoo-addon-g2p_openid_vci_rest_api>=17.0dev,<17.1dev",
    "odoo-addon-g2p_portal_auth>=17.0dev,<17.1dev",
    "odoo-addon-g2p_profile_image>=17.0dev,<17.1dev",
    "odoo-addon-g2p_registry_addl_info>=17.0dev,<17.1dev",
    "odoo-addon-g2p_registry_base>=17.0dev,<17.1dev",
    "odoo-addon-g2p_registry_documents>=17.0dev,<17.1dev",
    "odoo-addon-g2p_registry_encryption>=17.0dev,<17.1dev",
    "odoo-addon-g2p_registry_group>=17.0dev,<17.1dev",
    "odoo-addon-g2p_registry_individual>=17.0dev,<17.1dev",
    "odoo-addon-g2p_registry_membership>=17.0dev,<17.1dev",
    "odoo-addon-g2p_registry_rest_api>=17.0dev,<17.1dev",
    "odoo-addon-g2p_superset_dashboard>=17.0dev,<17.1dev",
    "odoo-addon-mts_connector>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
